# redis-search-py

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  dataset.py  main.py  schemas.py  service.py
backend/app/search/: __init__.py  bootstrap.py  constants.py  contracts.py  filters.py  mappers.py  redis_service.py  schema.py
backend/app/search/modes/: __init__.py  advanced.py  full_text.py  hybrid.py  semantic.py
backend/data/: movies.json
backend/tests/: test_api.py  test_dataset.py  test_redis_service_similarity.py  test_rrf.py  test_service_public_imports.py
docs/: architecture-diagram.md  full-text-search-basics.md  hybrid-search-basics.md  semantic-search-basics.md
docs/superpowers/plans/: 2026-05-14-search-service-refactor.md
docs/superpowers/specs/: 2026-05-14-search-service-refactor-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  storyMode.ts  styles.css  types.ts
