[project]
name = "redis-search-learning-lab-backend"
version = "0.1.0"
description = "FastAPI + RedisVL backend for a guided full-text/vector/hybrid search learning lab."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.0",
  "redisvl>=0.17.0",
  "sentence-transformers>=5.0.0",
  "pydantic-settings>=2.10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
